src/test/ui/pattern/usefulness/match-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `i32::MIN..=0_i32` and `2_i32..=i32::MAX` not covered
  --> $DIR/match-non-exhaustive.rs:2:11
   |
LL |     match 0 { 1 => () }
   |           ^ patterns `i32::MIN..=0_i32` and `2_i32..=i32::MAX` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i32`

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/match-non-exhaustive.rs:3:11
   |
LL |     match 0 { 0 if false => () }
   |           ^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `i32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
